# pythonium

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS  Dockerfile  Dockerfile.develop  MANIFEST.in  Makefile  README.md  docker-compose.develop.yml  docker-compose.yml  docs_requirements.txt  pyproject.toml  requirements.build.txt  requirements.test.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/source/: about.rst  api.rst  conf.py  index.rst  tutorial.rst
docs/source/tutorial/: 01_first_player.rst  02_random_walker.rst  02_understanding_the_unknown.rst  (+1 more)
pythonium/: __init__.py  bots.py  cfg.py  core.py  debugger.py  explosion.py  galaxy.py  game.py  game_modes.py  helpers.py  index.html  logger.py  main.py  main.py.orig  metrics_collector.py  output_handler.py  planet.py  player.py  renderer.py  ship.py  ship_type.py  validators.py  vectors.py
pythonium/bots/: __init__.py  monitor_player.py  pacific_player.py  random_walk.py  standard_player.py
pythonium/game_modes/: __init__.py  base.py  classic_mode.py  sandbox_mode.py  solar_system_mode.py
pythonium/orders/: core.py  extractor.py  galaxy.py  planet.py  request.py  ship.py
pythonium/rules/: core.py  executor.py  extractor.py  galaxy.py  order.py  planet.py  request.py  ship.py
pythonium/webrenderer/: index.html  web_renderer.js
tests/: conftest.py  factories.py  game_modes.py  test_galaxy.py  test_planet.py  test_run_turn.py
tests/game_modes/: test_classic_mode.py
tests/orders/: test_extractor.py  test_galaxy.py  test_planet.py  test_ship.py
tests/rules/: test_extractor.py  test_galaxy.py  test_planet.py  test_ship.py
(+4 files in other folders)
