[tool.poetry]
name = "pythonium"
version = "0.3.0b0"
description = "A space strategy algorithmic-game build in python"
authors = ["Bruno Geninatti <brunogeninatti@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8, <4"
attrs = "^21.4.0"
click = "^8.0.4"
numpy = "^1.22.3"
sphinx-autodoc-typehints = {version = "^1.11.1", optional = true}
sphinx-rtd-theme = {version = "^0.5.0", optional = true}
autodoc = {version = "^0.5.0", optional = true}
Sphinx = {version = "^3.3.1", optional = true}
matplotlib = {version = "^3.4.3", optional = true}

[tool.poetry.dev-dependencies]
Faker = "^6.4.1"
factory-boy = "^3.2.1"
mockito = "^1.3.0"
pytest-mockito = "^0.0.4"
pytest-mock = "^3.7.0"
pre-commit = "^2.17.0"

[tool.poetry.extras]
docs = ["sphinx-autodoc-typehints", "sphinx-rtd-theme", "autodoc", "Sphinx"]
render = ["matplotlib"]

[tool.poetry.scripts]
pythonium = 'pythonium.main:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0b0"
version_files = [
    "pythonium/__init__.py",
    "pyproject.toml:version"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
